# Digital-necrosis-paper

./: .gitignore  CLAUDE.md  checkpoint.md  codex.md  digital_necrosis_spec_v4.docx  pyproject.toml  status.md  tasks.md
.claude/: settings.local.json
configs/: default.yaml
docker/: Dockerfile  docker-compose.yaml
docs/: LESSONS.md  PRD.md
scripts/: run_benchmarks.py  run_calibration.py  run_experiment.py
src/digital_necrosis/: __init__.py  config.py
src/digital_necrosis/agent/: __init__.py
src/digital_necrosis/dataset/: __init__.py
src/digital_necrosis/evaluation/: __init__.py  metrics.py
src/digital_necrosis/memory/: __init__.py  precision_api.py
src/digital_necrosis/quantization/: __init__.py
tests/: conftest.py  test_metrics.py  test_precision_api.py
